# March7thAssistant

./: .dockerignore  .gitignore  .gitmodules  CNAME  CONTRIBUTING.md  Changelog.md  Dockerfile  FQA.md  March7th Assistant.spec  March7th Launcher.spec  March7th Updater.spec  README.md  README_EN.md  README_JA.md  README_KR.md  README_TW.md  _sidebar.md  app.py  build.py  config.yaml  docker-compose.yml  entrypoint.sh  fight-latest.json  index.html  latest.json  main.py  merge_test  one-key-run.bat  pyproject.toml  requirements-docker.txt  requirements.txt  schedule_checker.py  start.bat  test.py  universe-latest.json  update.py  updater.py  企业微信robot发送图片消息.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  (+2 more)
app/: changelog_interface.py  faq_interface.py  fqa_interface.py  help_interface.py  home_interface.py  log_interface.py  main_window.py  schedule_dialog.py  setting_interface.py  tasks_interface.py  tools_interface.py  tutorial_interface.py  warp_interface.py  workflow_interface.py
managers/: automation.py  automation_manager.py  config.py  config_manager.py  logger.py  logger_manager.py  notify.py  notify_manager.py  ocr.py  ocr_manager.py  screen.py  screen_manager.py  translate_manager.py
one-key-run/: one-key-run.cpp
scripts/: Auto_Simulated_Universe.bat  Fhoe-Rail.bat  update_Auto_Simulated_Universe.bat  update_March7thAssistant.bat
update/: update.py
utils/: color.py  command.py  console.py  date.py  encryption.py  gamecontroller.py  image_utils.py  ime_switch.py  schedule.py  screenshot_util.py  singleton.py  tasks.py
(+279 files in other folders)
