[project]
name = "march7thassistant"
version = "0.1.0"
description = "March7thAssistant automation app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruamel.yaml==0.19.1",
    "pyyaml==6.0.3",
    "colorama==0.4.6",
    "packaging==25.0",
    "pyuac==0.0.3; sys_platform == 'win32'",
    "playsound3==3.3.0",
    "tqdm==4.67.1",
    "psutil==7.2.1",
    "pyautogui==0.9.54",
    "mss==10.1.0",
    "pygetwindow==0.0.9",
    "requests[socks]==2.33.0",
    "charset_normalizer==3.4.4",
    "imageio==2.37.2",
    "Pillow==12.2.0",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "onepush==1.4.0",
    "winotify==1.1.0; sys_platform == 'win32'",
    "Markdown==3.10",
    "PySide6-Fluent-Widgets==1.11.1",
    "PySideSix-Frameless-Window==0.8.0",
    "PySide6==6.10.2",
    "pylnk3==0.4.3",
    "pyperclip==1.11.0",
    "qrcode==8.2",
    "PySocks==1.7.1",
    "PyPAC==0.17.2",
    "requests-toolbelt==1.0.0",
    "matrix-nio==0.25.2",
    "python-socks[asyncio]==2.8.0",
    "asyncio==4.0.0",
    "nio==3.4.2",
    "pandas==2.3.3",
    "openpyxl==3.1.5",
    "selenium==4.39.0",
    "keyboard==0.13.5",
    "opencc==1.2.0",
    "rapidocr==3.8.1",
    "onnxruntime-directml==1.24.4; sys_platform == 'win32'",
    "onnxruntime==1.24.4; sys_platform == 'darwin' or sys_platform == 'linux'",
    "openvino==2026.1.0",
]

[tool.uv]
package = false
